--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -56,8 +56,9 @@ h4 {
   height: 10rem;
   border-radius: 50em;
 }
-.about > .author {
-  max-width: 498px;
+.about > .author,
+.skills > .hardSkills {
+  max-width: 500px;
   line-height: 1.6;
 }
 .about > .contactNetwork > span {
@@ -72,4 +73,14 @@ h4 {
 }
 .contactNetwork a:hover {
   color: var(--colorGreen-700);
+}
+.skills {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 2rem;
+  border: 0.5px solid var(--colorGray-600);
+  border-radius: 1rem;
 }
