--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -4,11 +4,13 @@
   transform: translateY(-0.25em);
 }
 section {
-  margin-top: 4rem;
+  margin: 8rem 0;
   display: flex;
   flex-direction: column;
 }
-section > h4:first-child {
+section .titleProject {
+  margin-top: 2rem;
+  padding: 2rem;
   text-align: center;
   display: flex;
   justify-content: center;
