--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,37 +1,85 @@
+body {
+  position: relative;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  margin: 3.25rem auto;
+  padding-bottom: 2.8rem;
+  border-bottom: 1px solid var(--colorGray-600);
+}
 
-.header{
-    
+.nav li {
+  text-decoration: none;
+  list-style: none;
+}
+.nav li a {
+  color: var(--white);
+}
+.logo {
+  font-family: var(--Titles);
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin-left: 1rem;
+}
+.menuDesktop {
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+}
+
+.menuDesktop a {
+  font-family: var(--paragraph);
+  color: var(--colorGray-200);
+  font-weight: 600;
+  transition: color 0.2s;
+}
+.menuDesktop a:hover {
+  color: var(--colorGray-100);
+}
+
+.hidden,
+.buttonMobile {
+  display: none;
+}
+.buttonMobile {
+  font-size: 3rem;
+  color: var(--colorGreen-700);
+  border: none;
+  background: transparent;
+}
+.menuMobile {
+  position: absolute;
+  top: 3%;
+  left: 0;
+  background-color: var(--colorGray-800);
+  width: 100%;
+  height: 100vh;
+  text-align: left;
+  z-index: 5;
+  overflow: hidden;
+}
+.menuMobile:active {
+}
+.menuMobile li {
+  padding: 1rem 2rem;
+  border-top: 0.2px solid var(--colorGray-600);
+  transition: 0.2s;
+}
+
+@media (max-width: 800px) {
+  .menuDesktop {
+    display: none;
+  }
+  .buttonMobile {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    margin: 3.25rem auto;
-    padding-bottom:2.8rem ;
+    margin-right: 1rem;
+  }
+  .nav {
+    margin: 1rem;
+    padding-bottom: 0;
     border-bottom: 1px solid var(--colorGray-600);
-   
-}
-
-
-
-.logo span{
-   font-family: var(--Titles);
-   font-weight: bold;
-   font-size: 1.5rem;
-}
-.route{
-   display: flex;
-   align-items: center;
-   gap: 4rem ;
-
-}
-
-.route a{
-    font-family: var(--paragraph);
-    color: var(--colorGray-200);
-    font-weight: 600;
-    transition: color 0.2s;
-}
-.route a:hover{
-    color: var(--colorGray-100);
-   
+  }
 }
