--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -21,11 +21,12 @@
 
   display: flex;
   flex-direction: column;
-  gap: 4rem;
+  gap: 2rem;
 }
 .imgContact,
 img {
   max-width: 500px;
+  width: 100%;
 }
 .imgContact > img {
   animation: float 1s ease-in-out infinite;
@@ -96,5 +97,23 @@ button {
   }
   100% {
     transform: translatey(0px);
+  }
+}
+
+@media (max-width: 800px) {
+  .projects {
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .contact {
+    flex-direction: column-reverse;
+    gap: 3rem;
+    margin: 5rem 0;
+  }
+  .imgContact,
+  img {
+    max-width: 200px;
   }
 }
