--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -1,7 +1,7 @@
 .about > .author,
 .skills > .hardSkills {
   max-width: 500px;
-  line-height: 1.8;
+  line-height: 1.4;
 }
 
 .wAbout > .initialDescription > h2 {
@@ -24,7 +24,7 @@ h2 {
   font-size: 3rem;
 }
 .textEffect {
-  min-height: 200px;
+  min-height: 250px;
 }
 
 .about {
@@ -42,28 +42,13 @@ h4 {
   margin-bottom: 0.6rem;
   font-size: 1.75rem;
 }
-.about > .avatar {
-  background: linear-gradient(
-    346deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(59, 246, 134, 1) 0%,
-    rgb(29, 233, 165) 0%,
-    rgba(59, 246, 134, 1)
-  );
-  border-radius: 100rem;
-  border: 3px solid transparent;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  margin: 0.4rem;
-}
 
 .about > .avatar > img {
   width: 10rem;
   height: 10rem;
   border-radius: 50em;
+  border: 4px solid var(--colorGreen-700);
+  box-shadow: 0 1px 4px var(--colorGreen-700);
 }
 .about > .contactNetwork > span {
   margin-top: 0.8rem;
@@ -72,7 +57,7 @@ h4 {
   gap: 1.2rem;
 }
 .contactNetwork a {
-  color: var(--colorBlue-100);
+  color: var(--colorGray-100);
   transition: color 0.2s;
 }
 .contactNetwork a:hover {
@@ -101,16 +86,20 @@ h4 {
     margin-top: 1rem;
     flex-direction: column;
   }
-  .about > .avatar {
-    width: 10rem;
-    height: 10rem;
-  }
+
   .about > .avatar > img {
+    margin-top: 2rem;
     width: 9.6rem;
     height: 9.6rem;
   }
 
   .skills {
     flex-direction: column;
+  }
+  .textEffect {
+    min-height: 300px;
+  }
+  .contactNetwork a {
+    font-size: 2rem;
   }
 }
