--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -29,10 +29,11 @@ section .titleProject {
 
 .projectImage > img {
   max-width: 360px;
+  min-width: 300px;
   width: 100%;
   border-radius: 1rem;
   height: 250px;
-  object-fit: cover;
+  background-size: cover;
   object-position: center;
 }
 .textProject {
