--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -91,6 +91,9 @@ body {
     padding-bottom: 0;
     border-bottom: 1px solid var(--colorGray-600);
   }
+  .menuMobile li a {
+    color: var(--white) !important;
+  }
   .close {
     display: inline;
   }
