--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -3,9 +3,12 @@
   box-shadow: 0 0.5em 0.5em -0.4em var(--colorGreen-700);
   transform: translateY(-0.25em);
 }
-.project {
+.projects {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin-top: 5rem;
+  padding: 2rem 0;
 }
 section .titleProject {
   margin-top: 2rem;
